# Exerpt

./: .gitignore  LICENSE  README.md  demo_result.md  package-lock.json  package.json  pyproject.toml  vercel.json
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md
scripts/: demo_output.py
src/codepact/: __init__.py  api.py  cli.py  engine.py  graph.py  i18n.py  language.py  models.py  ranker.py  renderer.py  scanner.py  sifter.py  tokenizer.py
src/exerpt/: __init__.py  api.py  cli.py  engine.py  graph.py  i18n.py  job_store.py  models.py  ranker.py  renderer.py  scanner.py  sifter.py  tokenizer.py
tests/: test_api.py  test_context_budgeting.py  test_dependency_analysis.py  test_polyglot_engine.py  test_scanner.py  test_sifter.py  test_tokenizer.py
webapp/: eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
webapp/app/: globals.css  i18n.ts  layout.tsx  manifest.ts  robots.ts  sitemap.ts  theme.ts
webapp/app/api/feedback/: route.ts
webapp/app/components/: HomeClient.tsx  Logo.tsx  Workspace.tsx  brand-logo.tsx  code-editor.tsx  dependency-graph.tsx  markdown-preview.tsx  result-panel.tsx  workspace-persistence.ts
webapp/app/components/workspace/: DiffView.tsx  Editor.tsx  Explorer.tsx  ResultPanel.tsx  (+1 more)
webapp/app/config/: site.ts
webapp/app/health/: route.ts
webapp/app/hooks/: useWorkspaceState.ts
webapp/app/jobs/: route.ts
webapp/app/lib/: backend-proxy.ts  discord.ts
webapp/app/locales/: en.json  hi.json  ja.json  ru.json  zh.json
webapp/app/sift/: route.ts
webapp/app/types/: exerpt.ts
(+2 files in other folders)
