[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "codepact"
version = "0.1.0"
description = "Task-oriented codebase sifter for compact LLM prompts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Codepact Contributors" }]
dependencies = [
  "charset-normalizer>=3.3",
  "networkx>=3.3",
  "pathspec>=0.12",
  "rich>=13.7",
  "tiktoken>=0.7",
  "tree-sitter>=0.22",
  "tree-sitter-language-pack>=0.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "mypy>=1.10",
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.scripts]
codepact = "codepact.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/codepact"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
